Working file storage
* refactor interfaces and abstract classes to be used by aggregates
* implement a file-based storage
* update the coffee maker example