@@ -1,15 +1,16 @@
 package com.bartnik.eventstore.state;
 
+import com.bartnik.eventstore.SequencedEvent;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 
 import java.lang.reflect.Method;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import com.bartnik.eventstore.Event;
 import com.bartnik.eventstore.State;
 
 @RequiredArgsConstructor
@@ -18,11 +19,11 @@ public class HandlerExtractor {
   final Class<?> base;
 
   public HandlerExtractor() {
-    this(Event.class);
+    this(SequencedEvent.class);
   }
 
-  public Map<Class<? extends Event>, Method> extract(@NonNull final State state) {
-    return List.of(state.getClass().getMethods())
+  public Map<Class<? extends SequencedEvent>, Method> extract(@NonNull final State state) {
+    return Arrays.asList(state.getClass().getMethods())
       .stream()
       .filter(this::isEventHandler)
       .collect(Collectors.toMap(this::eventType, Function.identity()));
@@ -45,8 +46,8 @@ public class HandlerExtractor {
     return interfaze.isAssignableFrom(clazz);
   }
 
-  public Class<? extends Event> eventType(final Method method) {
-    return firstParameterType(method).asSubclass(Event.class);
+  public Class<? extends SequencedEvent> eventType(final Method method) {
+    return firstParameterType(method).asSubclass(SequencedEvent.class);
   }
 
 }
